# winqtdeployer

./: CMakeLists.txt  CheckBoxTree.cpp  CheckBoxTree.h  README.md  mainwindow.cpp  mainwindow.h  modelselectiondialog.cpp  resources.qrc  translations.json
